@@ -12,7 +12,7 @@
 
 #include "includes.h"
 #include "Sprites/sprite.h"
-#include "Sprites/spritelist.h"
+#include "Sprites/spritemanager.h"
 #include "Utilities/coordinate.h"
 
 #define PPA_MATCHES( text ) if( !strcmp( subName.c_str(), text ) )
@@ -75,7 +75,7 @@ class Planets {
 		
 		bool Load( string filename );
 		
-		void RegisterAll( SpriteList *sprites );
+		void RegisterAll( SpriteManager *sprites );
 
 	protected:
 		Planets() {};
